# TeleStore

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  setup.ps1  setup.sh
.github/workflows/: audit.yml  release-signed.yml  release.yml
app/: index.html  package-lock.json
app/src/: App.tsx  types.ts  utils.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: bandwidth.rs  crypto.rs  db.rs  lib.rs  main.rs  server.rs  share_routes.rs  upload_service.rs
app/src-tauri/src/commands/: api_settings.rs  fs.rs  mod.rs  system.rs
app/src/components/desktop/: DesktopDashboard.tsx
app/src/components/desktop/dashboard/: AppLockSettings.tsx  EmptyState.tsx  FileExplorer.tsx  SettingsModal.tsx
app/src/components/mobile/: MobileDashboard.tsx
app/src/components/shared/: AuthWizard.tsx  LockScreen.tsx
app/src/context/: SettingsContext.tsx
app/src/hooks/: useAppLock.ts  useFileUpload.ts  useKeyboardShortcuts.ts  useUpdateCheck.ts
app/src/theme/: presets.ts
docs/: E2E_ENCRYPTION.md  SIGNING.md  WEBDAV_GATEWAY.md
selfhost/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml
