[package]
name = "app"
version = "1.9.5"
description = "Turn your Telegram account into an unlimited, secure cloud storage drive. an Open-source desktop app built with Tauri, Rust, and React."
authors = ["Vaibhav"]
edition = "2021"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless self-host server (Track B). Opt-in only — never built by the normal
# desktop `tauri build`/`tauri dev` flow:
#   cargo build --release --features headless --bin td-headless
[[bin]]
name = "td-headless"
path = "src/bin/td-headless.rs"
required-features = ["headless"]

# CLI client for the REST API (Track D). Opt-in only:
#   cargo build --release --features cli --bin td-cli
[[bin]]
name = "td-cli"
path = "src/bin/td-cli.rs"
required-features = ["cli"]

[features]
# Enables compilation of the td-headless binary. Inert for the desktop app.
headless = []
# Enables compilation of the td-cli binary. Inert for the desktop app.
cli = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio = { version = "1", features = ["full"] }

tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = "0.4"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2"
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
futures = "0.3"
async-stream = "0.3"
actix-rt = "2"
tauri-plugin-process = "2"
bitflags = "=2.10.0"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
rand = "0.9"
sha2 = "0.10"
bcrypt = "0.16"
constant_time_eq = "0.3"
# Track C: client-side end-to-end file encryption (see src/crypto.rs).
argon2 = "0.5"
chacha20poly1305 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
rar = "0.4"
sevenz-rust2 = "0.7"
walkdir = "2"
sqlite = { version = "0.37.0", features = ["bundled"] }
mp4parse = "0.17"
urlencoding = "2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "socks"] }
sysinfo = "0.30"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1.1"

# Redirect grammers-mtsender to the vendored copy in `vendor/grammers-mtsender/`,
# which is identical to upstream rev `d07f96f` except that its `hickory-resolver`
# dependency is bumped from 0.25.2 -> 0.26.1. This patches:
#   - RUSTSEC-2026-0118 (hickory-proto: NSEC3 closest-encloser proof unbounded loop)
#   - RUSTSEC-2026-0119 (hickory-proto: O(n^2) name-compression CPU exhaustion)
# Required because the upstream `Lonami/grammers` repository was archived on
# 2026-02-10, so no fix can land upstream. The other grammers-* crates continue
# to come from the original git rev and are not affected.
[patch."https://github.com/Lonami/grammers"]
grammers-mtsender = { path = "vendor/grammers-mtsender" }

# Redirect `quick-xml` to a vendored copy of the upstream 0.41.0 source with its
# `version` relabelled to 0.39.99 so it still satisfies the `^0.39` requirement
# of `plist 1.9.0` (via tauri) and `wayland-scanner 0.31.10` (via arboard/wl-clipboard-rs).
# This patches:
#   - RUSTSEC-2026-0194 (quick-xml: O(N^2) duplicate-attribute-check CPU DoS)
#   - RUSTSEC-2026-0195 (quick-xml: unbounded NsReader namespace-declaration allocation)
# Both fixes are upstream in 0.41.0. Neither `plist` nor `wayland-scanner`
# touches the added API surface, so the bump is drop-in. Revisit and remove
# once `plist`/`wayland-scanner` publish releases that depend on quick-xml >= 0.41.
[patch.crates-io]
quick-xml = { path = "vendor/quick-xml" }

[package.metadata.tauri.bundle.windows]
# Embed the WebView2 bootstrapper so the app works on Windows systems
# where the WebView2 runtime is not pre-installed (fresh installs, servers, etc.)
webview-install-mode = "embeddir"

